kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glas-ljudstva-deployment
  labels:
    app: glas-ljudstva
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glas-ljudstva
  template:
    metadata:
      labels:
        app: glas-ljudstva
    spec:
      containers:
        - name: glas-ljudstva
          image: glas-ljudstva
          command:
            - gunicorn
            - glasljudstva.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 1Gi
              cpu: 500m
