kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: max-body-size
spec:
  buffering:
    maxRequestBodyBytes: 10485760  # 10m
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://glas-ljudstva.si"
      - "https://www.glas-ljudstva.si"
      - "https://demo.glas-ljudstva.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glas-ljudstva
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: glas-ljudstva-max-body-size@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - glas-ljudstva.si
        - www.glas-ljudstva.si
        - demo.glas-ljudstva.si
      secretName: glas-ljudstva-tls
  rules:
    - host: glas-ljudstva.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glas-ljudstva
                port:
                  number: 8000
    - host: www.glas-ljudstva.si
      http: *http_paths
    - host: demo.glas-ljudstva.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glas-ljudstva-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: glas-ljudstva-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.glas-ljudstva.si
      secretName: glas-ljudstva-nginx-tls
  rules:
    - host: files.glas-ljudstva.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glas-ljudstva-nginx
                port:
                  number: 80
