kustomize/staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glas-ljudstva-staging-deployment
  labels:
    app: glas-ljudstva-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glas-ljudstva-staging
  template:
    metadata:
      labels:
        app: glas-ljudstva-staging
    spec:
      containers:
        - name: glas-ljudstva-staging
          image: glas-ljudstva-staging
          command:
            - gunicorn
            - glasljudstva.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: glas-ljudstva-staging
spec:
  selector:
    app: glas-ljudstva-staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glas-ljudstva-staging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - staging.glas-ljudstva.si
      secretName: glas-ljudstva-staging-tls
  rules:
    - host: staging.glas-ljudstva.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glas-ljudstva-staging
                port:
                  number: 8000
